frontend/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  selector:
    matchLabels:
      app: angular
  replicas: 1
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: poc-frontend:0.0.1
        ports:
        - containerPort: 80
