frontend/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular
spec:
  selector:
    app: angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
  type: NodePort
